# yt-chat

./: .gitignore  Dockerfile  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
tests/: test_app.py
yt-chat/: app.py  models.py
yt-chat/templates/: index.html
yt_chat/: .app.py.swp  app.py  config.py  config_messages.py  config_models.py  config_prompts.py  internal_state.py  settings.py
yt_chat/core/: answer.py  summarize.py
yt_chat/llm/: answer.py  chat.py  models.py  openai.py  retriever.py  summarize.py
yt_chat/static/: script.js
yt_chat/templates/: index.html
yt_chat/utils/: chunk_text.py  images.py  parallel.py  qdrant.py  stream.py  tqdm_joblib.py  transcript.py  youtube.py
