[tool.poetry]
name = "yt-chat"
version = "0.1.0"
description = "A Flask application for summarizing YouTube videos and chatting with a bot."
authors = ["mcordier <matt.cordier@icloud.com>"]
readme = "README.md"
packages = [{include = "yt_chat"}]


[tool.poetry.dependencies]
python = "^3.10"
youtube-transcript-api = "^0.6.2"
chainlit = "^1.0.504"
tenacity = "^8.2.3"
#flib = {path = "./flib", develop = true}
flib = {git = "https://github.com/Fonction-Labs/flib", branch = "main"} #, tag = "0.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
