[tool.poetry]
name = "yt-chat"
version = "0.1.0"
description = ""
authors = ["mcordier <matt.cordier@icloud.com>"]
readme = "README.md"
packages = [{include = "yt_chat"}]


[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.0.504"
pypdf = "^4.2.0"
pdf2image = "^1.17.0"
flib = {git = "https://github.com/Fonction-Labs/flib", branch = "main"} #, tag = "0.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
